k8s/06-mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: skillpulse
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      serviceAccountName: skillpulse-sa
      containers:
        - name: mysql
          image: mysql:8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql

            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - mysql -uroot -p$MYSQL_ROOT_PASSWORD -e "SELECT 1"
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysql -uroot -p$MYSQL_ROOT_PASSWORD -e "SELECT 1"
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: init
          configMap:
            name: mysql-init
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "skillpulse-db-secret"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 1Gi
